fix: hiding the scrollbar (country list)

--- a/src/assets/sass/weather.scss
+++ b/src/assets/sass/weather.scss
@@ -178,11 +178,14 @@
   left: 0;
   top: 100%;
   transform: translateY(-2px);
+  background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(105, 105, 105, 0.3);
   opacity: 0;
   visibility: hidden;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow: -moz-scrollbars-none;
+  -ms-overflow-style: none;
   z-index: 10;
   transition: transform 200ms ease, opacity 200ms ease;
 }
@@ -199,8 +202,8 @@
   visibility: visible;
 }
 
-.w-location__country-list {
-  background-color: #fff;
+.w-location__country-list::-webkit-scrollbar {
+  width: 0 !important
 }
 
 .w-location__country-item {
@@ -328,8 +331,8 @@
 }
 
 .w-widget__loader {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   position: absolute;
   left: 50%;
   top: 50%;
